--- a/app/src/main/res/layout/fragment_walk_through.xml
+++ b/app/src/main/res/layout/fragment_walk_through.xml
@@ -5,6 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context=".ui.main.PlaceholderFragment">
 
     <TextView
@@ -12,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:textSize="24sp"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +27,8 @@
         android:id="@+id/walk_through_sub_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +38,7 @@
         android:id="@+id/walk_through_image"
         android:layout_width="188dp"
         android:layout_height="394dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/WalkThroughImageContentDescription"
         android:src="@drawable/img_01"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +50,8 @@
         android:id="@+id/walk_through_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Button"
+        android:layout_marginTop="50dp"
+        android:text="@string/walkthrough_button"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
