--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,16 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- custom style -->
+    <style name="MyStyle" parent="Theme.MaterialComponents.NoActionBar">
+        <!-- 상태바 컬러 : 빨간색으로 설정 -->
+        <item name="android:statusBarColor">@android:color/holo_green_light</item>
+        <!-- 타이틀바 제거 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 액션바 제거 -->
+        <item name="android:windowActionBar">false</item>
+        <!-- 앱이 켜질 때 미리보기 제거 -->
+        <item name="android:windowDisablePreview">true</item>
+    </style>
+
 </resources>
