--- a/app/src/main/res/layout/tournament_item_search_main.xml
+++ b/app/src/main/res/layout/tournament_item_search_main.xml
@@ -10,6 +10,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -17,8 +19,6 @@
             android:id="@+id/tournament_search_first_iv"
             android:layout_width="0dp"
             android:layout_height="120dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tournament_search_second_iv"
@@ -38,63 +38,62 @@
             android:id="@+id/tournament_search_text_container"
             android:layout_width="0dp"
             android:layout_height="120dp"
-            android:layout_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/tournament_search_image_container"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tournament_search_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
-            android:text="음식 이상형 월드컵"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/tournament_search_writer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="작성자"
-            app:layout_constraintStart_toStartOf="@+id/tournament_search_title_tv"
-            app:layout_constraintTop_toBottomOf="@id/tournament_search_title_tv" />
+                <TextView
+                    android:id="@+id/tournament_search_title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="음식 이상형 월드컵"
+                    android:textSize="17dp"
+                    android:textColor="#000000"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tournament_search_writer_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="13dp"
-            android:text="yunbok"
-            app:layout_constraintStart_toEndOf="@id/tournament_search_writer"
-            app:layout_constraintTop_toTopOf="@id/tournament_search_writer"
-            />
+                <TextView
+                    android:id="@+id/tournament_search_writer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="작성자"
+                    android:textStyle="bold"
+                    android:textColor="#99E000"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tournament_search_title_tv" />
 
-        <TextView
-            android:id="@+id/tournament_search_playcnt_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="7dp"
-            android:text="150,000"
-            app:layout_constraintStart_toEndOf="@id/tournament_search_writer_tv"
-            app:layout_constraintTop_toTopOf="@+id/tournament_search_writer_tv"/>
+                <TextView
+                    android:id="@+id/tournament_search_writer_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="yunbok"
+                    app:layout_constraintStart_toEndOf="@id/tournament_search_writer"
+                    app:layout_constraintTop_toTopOf="@id/tournament_search_writer" />
 
-        <TextView
-            android:id="@+id/tournament_search_likecnt_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:text="4,000"
-            app:layout_constraintStart_toEndOf="@+id/tournament_search_playcnt_tv"
-            app:layout_constraintTop_toTopOf="@+id/tournament_search_playcnt_tv"/>
+                <TextView
+                    android:id="@+id/tournament_search_playcnt_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="150,000"
+                    app:layout_constraintStart_toEndOf="@id/tournament_search_writer_tv"
+                    app:layout_constraintTop_toTopOf="@+id/tournament_search_writer_tv" />
 
-        <TextView
-            android:id="@+id/tournament_search_datetime_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="13dp"
-            android:text="2020-02-02 / 20:20:20"
-            app:layout_constraintTop_toBottomOf="@id/tournament_search_writer"
-            app:layout_constraintStart_toStartOf="@+id/tournament_search_writer"/>
+                <TextView
+                    android:id="@+id/tournament_search_likecnt_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4,000"
+                    app:layout_constraintStart_toEndOf="@+id/tournament_search_playcnt_tv"
+                    app:layout_constraintTop_toTopOf="@+id/tournament_search_playcnt_tv" />
+
+                <TextView
+                    android:id="@+id/tournament_search_datetime_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2020-02-02 / 20:20:20"
+                    app:layout_constraintStart_toStartOf="@+id/tournament_search_writer"
+                    app:layout_constraintTop_toBottomOf="@id/tournament_search_writer" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
