--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6799FF</color>
-    <color name="colorPrimaryDark">#4374D9</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#99E000</color>
+    <color name="colorPrimaryDark">#99E000</color>
+    <color name="colorAccent">#99E000</color>
     <color name="colorWordInColorPrimary">#FFFFFF</color>
 </resources>
