[개발] 토너먼트 생성 몇 강인지 고르는 팝업 레이아웃 개발

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#99E000</color>
-    <color name="colorPrimaryDark">#99E000</color>
-    <color name="colorAccent">#99E000</color>
+    <color name="colorPrimary">#75BC00</color>
+    <color name="colorPrimaryDark">#75BC00</color>
+    <color name="colorAccent">#75BC00</color>
     <color name="colorWordInColorPrimary">#FFFFFF</color>
 </resources>
