--- a/app/src/main/res/layout/tournament_item_search_main.xml
+++ b/app/src/main/res/layout/tournament_item_search_main.xml
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:text="작성자"
                     android:textStyle="bold"
-                    android:textColor="#99E000"
+                    android:textColor="@color/colorPrimary"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tournament_search_title_tv" />
 
