--- a/app/src/main/res/layout/activity_tournament_create_popup.xml
+++ b/app/src/main/res/layout/activity_tournament_create_popup.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
+    android:background="@color/colorWordInColorPrimary"
     tools:context=".ui.TournamentCreatePopupActivity">
 
     <TextView
         android:id="@+id/tournament_create_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:text="음식 이상형 월드컵"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,33 +40,42 @@
         app:layout_constraintEnd_toEndOf="parent">
         <Button
             android:id="@+id/tournament_create_8_bt"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:text="8강"
+            android:textSize="30dp"
+            android:background="@drawable/button_border_line"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
             android:id="@+id/tournament_create_16_bt"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="5dp"
             android:text="16강"
+            android:textSize="30dp"
+            android:background="@drawable/button_border_line"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/tournament_create_8_bt"/>
 
         <Button
             android:id="@+id/tournament_create_64_bt"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:text="64강"
+            android:textSize="30dp"
+            android:background="@drawable/button_border_line"
             app:layout_constraintBaseline_toBaselineOf="@+id/tournament_create_128_bt"
             app:layout_constraintStart_toStartOf="@+id/tournament_create_8_bt" />
 
         <Button
             android:id="@+id/tournament_create_128_bt"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:text="128강"
+            android:textSize="30dp"
+            android:background="@drawable/button_border_line"
             app:layout_constraintStart_toStartOf="@+id/tournament_create_16_bt"
             app:layout_constraintTop_toBottomOf="@+id/tournament_create_16_bt" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -72,14 +83,14 @@
     <Button
         android:id="@+id/tournament_create_bt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:text="시작하기"
         android:textColor="@color/colorWordInColorPrimary"
         android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/tournament_round_container"
         app:layout_constraintStart_toStartOf="@+id/tournament_round_container"
         app:layout_constraintEnd_toEndOf="@+id/tournament_round_container"/>
