[개발] 토너먼트 생성 액티비티, 공개 버튼 기능 구현 완료

--- a/app/src/main/res/layout/activity_tournament_create.xml
+++ b/app/src/main/res/layout/activity_tournament_create.xml
@@ -77,7 +77,7 @@
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_marginRight="10dp"
-          android:background="@drawable/button_border_line"
+          android:background="@drawable/push_button_border_line"
           android:text="전체공개" />
 
       <Button
@@ -107,6 +107,7 @@
           android:layout_weight="1"
           android:layout_marginLeft="10dp"
           android:padding="10dp"
+          android:visibility="invisible"
           android:background="@drawable/button_border_line"
           android:ems="10"
           android:hint="비밀번호 입력"
