--- a/app/src/main/res/layout/activity_tournament_create_popup.xml
+++ b/app/src/main/res/layout/activity_tournament_create_popup.xml
@@ -60,20 +60,22 @@
             app:layout_constraintStart_toEndOf="@id/tournament_create_8_bt"/>
 
         <Button
-            android:id="@+id/tournament_create_64_bt"
+            android:id="@+id/tournament_create_32_bt"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:text="64강"
+            android:layout_marginTop="5dp"
+            android:text="32강"
             android:textSize="30dp"
             android:background="@drawable/button_border_line"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tournament_create_128_bt"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tournament_create_64_bt"
             app:layout_constraintStart_toStartOf="@+id/tournament_create_8_bt" />
 
         <Button
-            android:id="@+id/tournament_create_128_bt"
+            android:id="@+id/tournament_create_64_bt"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:text="128강"
+            android:layout_marginTop="5dp"
+            android:text="64강"
             android:textSize="30dp"
             android:background="@drawable/button_border_line"
             app:layout_constraintStart_toStartOf="@+id/tournament_create_16_bt"
