--- a/app/src/main/res/layout/tournament_image_container.xml
+++ b/app/src/main/res/layout/tournament_image_container.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
     android:orientation="vertical">
@@ -18,14 +18,16 @@
                 android:layout_height="150dp"
                 android:layout_weight="1"
                 android:layout_marginRight="15dp"
-                android:background="@drawable/img_01" />
+                android:padding="40dp"
+                android:src="@drawable/none_title_image" />
 
             <ImageView
                 android:id="@+id/tournament_image02"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_weight="1"
-                android:background="@drawable/img_01" />
+                android:padding="40dp"
+                android:src="@drawable/none_title_image" />
         </LinearLayout>
 
         <LinearLayout
