--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#75BC00</color>
     <color name="colorAccent">#75BC00</color>
     <color name="colorWordInColorPrimary">#FFFFFF</color>
+    <color name="colorTextForNotPushButton">#A6A6A6</color>
 </resources>
