랭킹 레이아웃 구현완료

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/action_create_tournament2"
-        android:title="토너먼트 만들기"/>
+        android:title="랭킹"/>
 
     <item
         android:id="@+id/action_create_tournament3"
