--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -7,17 +7,17 @@
 
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/ranking_win_image"
         android:layout_width="36dp"
         android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintStart_toEndOf="@+id/ranking_image"
+        app:layout_constraintTop_toBottomOf="@+id/ranking_trophy_image"
+        tools:srcCompat="@drawable/vs" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ranking_image"
         android:layout_width="138dp"
         android:layout_height="145dp"
         android:layout_marginStart="16dp"
@@ -28,18 +28,18 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/ranking_rank_num"
         android:layout_width="36dp"
         android:layout_height="28dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="102"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/ranking_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/ranking_name"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -48,38 +48,38 @@
         android:maxLines="2"
         android:text="아이유 너모너모 노래도 잘부르농♥"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/ranking_rank_num"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ranking_trophy_rate"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="88.77%"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/ranking_trophy_image"
+        app:layout_constraintTop_toBottomOf="@+id/ranking_name" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/ranking_win_rate"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="95.11%"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/ranking_trophy_image"
+        app:layout_constraintTop_toBottomOf="@+id/ranking_trophy_image" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ranking_trophy_image"
         android:layout_width="36dp"
         android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintStart_toEndOf="@+id/ranking_image"
+        app:layout_constraintTop_toBottomOf="@+id/ranking_name"
+        tools:srcCompat="@drawable/trophy" />
 </androidx.constraintlayout.widget.ConstraintLayout>
